# lit

./: CMakeCache.txt  CMakeLists.txt  Command.h  Commit.h  Exception.h  FileWatcher.h  Graph.h  Lit.h  Main.cpp  Makefile  cmake_install.cmake  config  file1  launch.json  lit  main  settings.json  tempCodeRunnerFile  tempCodeRunnerFile.cpp
sometest/: file1
test1/: initial  out-10.patch  out0-1.patch  out01.patch  out10.patch  out12.patch  out21.patch  working
test2/: out-10.patch  out0-1.patch  out01.patch  out10.patch
test2/initial/: file2
test2/working/: file2
test3/working/: file1  file2
test3/working/.lit/commits/: out-10.patch  out0-1.patch
test3/working/.lit/initial/: file1
test4/: file1.txt  file2.txt
test5/: file  out10.patch
test5/working/: file1
test6/: file2  file2.rej
test6/.lit/commits/: parents.txt
test6/.lit/commits/0/: -10.patch  0-1.patch  info.txt
test6/.lit/commits/1/: 01.patch  10.patch  info.txt
test6/.lit/commits/2/: 12.patch  21.patch  info.txt
test6/.lit/initial_copy/: file2.rej
testdir/: file1
testdir/.lit/: graph.txt
testdir/.lit/commits/: parents.txt
testdir/.lit/commits/0/: -10.patch  0-1.patch  info.txt
testdir/.lit/commits/1/: 01.patch  10.patch  info.txt
testdir/.lit/commits/2/: 12.patch  21.patch  info.txt
testdir/.lit/commits/3/: 03.patch  30.patch  info.txt
testinit/: lol
